@@ -4,8 +4,8 @@
     <id>OssnChat</id>
     <author>Core Team</author>
     <description>Allow users to chat with each other.</description>
-    <license>GNU General Public License, version 2</license>
-    <author_url>http://www.informatikon.com/</author_url>
+    <license>Open Source Social Network License (OSSN LICENSE) v3.0</license>
+    <author_url>https://www.softlab24.com/</author_url>
     <license_url>http://www.opensource-socialnetwork.org/licence</license_url>
     <version>3.0</version>
 	<requires>
