@@ -1,3 +1,8 @@
+OSSN - OPEN SOURCE SOCIAL NETWORK 4.3.1
+
+* Comments broken on profile cover
+* Security fixes 
+
 OSSN - OPEN SOURCE SOCIAL NETWORK 4.3
 
 * OSSN v4.x partially upgraded to v4.2
